exports[`Duration Duration.Full renders as expected 1`] = `
<span>
  0 seconds
</span>
`;

exports[`Duration Duration.Full renders as expected 2`] = `
<span>
  5 seconds
</span>
`;

exports[`Duration Duration.Full renders as expected 3`] = `
<span>
  15 minutes, 7 seconds
</span>
`;

exports[`Duration Duration.Full renders as expected 4`] = `
<span>
  1 hour, 45 minutes, 16 seconds
</span>
`;

exports[`Duration Duration.Full renders as expected 5`] = `
<span>
  4 hours, 59 minutes, 3 seconds
</span>
`;

exports[`Duration Duration.Full renders as expected 6`] = `
<span>
  1 day, 7 hours, 3 minutes
</span>
`;

exports[`Duration Duration.Full renders as expected 7`] = `
<span>
  1 week, 13 days, 16 hours
</span>
`;

exports[`Duration Duration.Full renders as expected 8`] = `
<span>
  9 weeks, 2 days, 20 hours
</span>
`;

exports[`Duration Duration.Micro renders as expected 1`] = `
<span>
  0s
</span>
`;

exports[`Duration Duration.Micro renders as expected 2`] = `
<span>
  5s
</span>
`;

exports[`Duration Duration.Micro renders as expected 3`] = `
<span>
  15m
</span>
`;

exports[`Duration Duration.Micro renders as expected 4`] = `
<span>
  2h
</span>
`;

exports[`Duration Duration.Micro renders as expected 5`] = `
<span>
  5h
</span>
`;

exports[`Duration Duration.Micro renders as expected 6`] = `
<span>
  1d
</span>
`;

exports[`Duration Duration.Micro renders as expected 7`] = `
<span>
  3w
</span>
`;

exports[`Duration Duration.Micro renders as expected 8`] = `
<span>
  9w
</span>
`;

exports[`Duration Duration.Short renders as expected 1`] = `
<span>
  0s
</span>
`;

exports[`Duration Duration.Short renders as expected 2`] = `
<span>
  5s
</span>
`;

exports[`Duration Duration.Short renders as expected 3`] = `
<span>
  15m 7s
</span>
`;

exports[`Duration Duration.Short renders as expected 4`] = `
<span>
  1h 45m
</span>
`;

exports[`Duration Duration.Short renders as expected 5`] = `
<span>
  4h 59m
</span>
`;

exports[`Duration Duration.Short renders as expected 6`] = `
<span>
  1d 7h
</span>
`;

exports[`Duration Duration.Short renders as expected 7`] = `
<span>
  1w 14d
</span>
`;

exports[`Duration Duration.Short renders as expected 8`] = `
<span>
  9w 3d
</span>
`;

exports[`Duration stateless Components are accessible 1`] = `
Array [
  "Full",
  "Short",
  "Micro",
]
`;
